# TeamTender-Repository-Generator

./: .gitignore  README.md  pyproject.toml
DemoProject/: README.md
src/teamtender_repository_generator.egg-info/: PKG-INFO  SOURCES.txt
src/trg/: .gitignore  cli.py  doctor.py  main.py  version.py
src/trg/generator/: engine.py  project.py  template.py
src/trg/pipeline/: pipeline.py
