[project]
name = "teamtender-repository-generator"
version = "0.1.0"
description = "TeamTender Repository Generator (TRG)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
    { name = "TeamTender Project" }
]

keywords = [
    "teamtender",
    "repository",
    "generator",
    "enterprise",
    "architecture"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
